syntax = "proto3";

import "google/api/annotations.proto";

package example.v1;

option go_package = "github.com/alanfran/grpc-streaming-example/pkg/example/v1;example";

service Example {
  // Takes a stream of byte chunks and returns the file's metadata.
  rpc CreateBigFile(stream CreateBigFileRequest) returns (BigFile) {
    option (google.api.http) = {
      post : "/v1/bigFiles"
    };
  };

  rpc GetBigFile(GetBigFileRequest) returns (stream GetBigFileResponse) {
    option (google.api.http) = {
      get : "/v1/{name=bigFiles/*}"
    };
  };
}

message BigFile {
  // resource name, ex: "bigFiles/some-UUID"
  string name = 1;
  // size of the big file in bytes
  int64 size_bytes = 2;
}

message CreateBigFileRequest {
  // resource name, ex: "bigFiles/some-UUID"
  string name = 1;
  bytes big_file_chunk = 2;
};

message GetBigFileRequest {
  // resource name, ex: "bigFiles/some-UUID"
  string name = 1;
};

message GetBigFileResponse { bytes big_file_chunk = 1; };